# rust-graphql-microservice-example

./: .dockerignore  Cargo.toml  Makefile  README.md  docker-compose.yaml  dockergen.py  package.json
article/: .env  Cargo.toml  Dockerfile  Makefile  sqlx-data.json
article/migrations/: 20210505030041_init.down.sql  20210505030041_init.up.sql
article/src/: lib.rs
article/src/request/: mod.rs
article/src/service/: mod.rs
auth/: Cargo.toml
comment/: .env  Cargo.toml  Dockerfile  Makefile  sqlx-data.json
comment/migrations/: 20210505030041_init.down.sql  20210505030041_init.up.sql
comment/src/: lib.rs
comment/src/service/: mod.rs
db/postgresql_multipledb/: Dockerfile  create-multiple-dbs.sh
docker_template/: article_server.j2  comment_server.j2  graphql_server.j2  rust_base.j2  user_server.j2
front/react-app/: package-lock.json  package.json  tsconfig.json
front/react-app/src/: App.tsx  index.tsx
front/react-app/src/components/: ArticleList.tsx
graphql/: Cargo.toml  Dockerfile
graphql/src/schema/: mod.rs  mutation.rs  object.rs  query.rs
graphql/src/schema/client/: mod.rs
graphql/src/schema/converter/: mod.rs
models/: Cargo.toml
models/src/: lib.rs
user/: .env  Cargo.toml  Dockerfile  Makefile  sqlx-data.json
user/migrations/: 20210505030041_init.down.sql  20210505030041_init.up.sql
user/src/: lib.rs
user/src/service/: mod.rs
