[package]
name = "comment"
version = "0.1.0"
authors = ["tacogips <me@tacogips.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "comment"
path = "src/lib.rs"

[[bin]]
name = "comment-server"
path = "src/bin/main.rs"

[dependencies]
tokio = {version = "1.3" , features = ["full"]}


#
# version of actix-web should be 4.beta or you'll get error below from sqlx.
# accoding to
# https://www.reddit.com/r/rust/comments/mqts17/issue_migrating_from_sqlx_035_to_051/
#
# The error message:
# comment_1  | [2021-05-05T02:56:49Z INFO  comment_server] db connection postgres://db_comment:pass@localhost/comment_db
# comment_1  | thread 'main' panicked at 'there is no reactor running, must be called from the context of a Tokio 1.x runtime', /usr/local/cargo/registry/src/github.com-1ecc6299db9ec823/sqlx-core-0.5.2/src/pool/inner.rs:331:5
# comment_1  | note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
# comment_1  | Panic in Arbiter thread.

actix-web = "4.0.0-beta.6"

sqlx = { version = "0.5", default-features = false, features = [ "postgres", "runtime-actix-rustls", "macros", "chrono", "decimal", "uuid", "json" ,"offline","migrate"]}


anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"

log = "0.4"
env_logger = "0.8"
async-trait = "0.1"

uuid = { version = "0.8", features = ["serde", "v4"] }


models = {path ="../models"}

[dev-dependencies]
tokio-test = "0.4"
