[package]
name = "graphql"
version = "0.1.0"
authors = ["tacogips <me@tacogips.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11"
actix-rt = "2.2"
actix-web = "3.3"
async-graphql = "2.8"
async-graphql-actix-web = "2.8.4"

[lib]
name = "graphql"
path = "src/lib.rs"

[[bin]]
name = "graphql-server"
path = "src/bin/main.rs"
