[package]
name = "models"
version = "0.1.0"
authors = ["tacogips <me@tacogips.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", default-features = false, features = [ "postgres", "runtime-actix-rustls", "macros", "chrono", "decimal", "uuid", "json" ,"offline","migrate"]}


serde = { version = "1.0", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"

uuid = { version = "0.8", features = ["serde", "v4"] }
